--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button>Add</button>
+                <button id="button">Add</button>
             </div>
 
             <ul id="list-container">
-                <li>Task 1</li>
+                <!-- <li class="checked">Task 1</li>
                 <li>Task 2</li>
-                <li>Task 3</li>
+                <li>Task 3</li> -->
             </ul>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
